FELIX-4649 - Get MetaTypeInformation while bundle is starting
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/metatype@1628955 13f79535-47bb-0310-9956-ffa450edef68

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+Changes from 1.0.10 to 1.0.12
+-----------------------------
+
+** Improvement
+    * [FELIX-4649] - Get MetaTypeInformation while bundle is starting
+
+
 Changes from 1.0.8 to 1.0.10
 ----------------------------
 
