Change the way the Component's Executors are provided to DepenencyManager: Now you have to register a "ComponentExecutorFactory" in the OSGI registry, and this service will then be used by the ComponentScheduler in order to create an Executor for every created components. It is better to do this instead of tracking a java.util.concurrent.Executor from the OSGi registry, mainly because: - using our own interface allows us to version it (we can't put a version on a java.util.concurrent.Executor interface) - Having a ComponentExecutorFactory service allows us to create a specific Executor for each component.
git-svn-id: https://svn.apache.org/repos/asf/felix/sandbox/pderop/dependencymanager-prototype@1633065 13f79535-47bb-0310-9956-ffa450edef68

--- a/org.apache.felix.dependencymanager.samples/src/org/apache/felix/dependencymanager/samples/device/api/README
+++ b/org.apache.felix.dependencymanager.samples/src/org/apache/felix/dependencymanager/samples/device/api/README
@@ -1,4 +1,4 @@
-This is an example showing a Dependency Manager "Adapter" in action. two kinds of services are
+This is an example showing a Dependency Manager "Adapter" in action. Two kinds of services are
 registered in the registry: some Device, and some DeviceParameter services. For each Device (having
 a given id), there is also a corresponding "DeviceParameter" service, having the same id.
 
