--- a/README
+++ b/README
@@ -4,6 +4,7 @@ Dependency Manager 4.0.0 general README
 
 - org.apache.felix.dependencymanager/design.txt
 - org.apache.felix.dependencymanager.benchmark/README
+- doc/A_Glance_At_DependencyManager.odp gives a quick overview of Dependency Manager, including new features.
 
 * to compile:
 
