--- a/org.apache.felix.dependencymanager.benchmark/README
+++ b/org.apache.felix.dependencymanager.benchmark/README
@@ -14,40 +14,85 @@ done at all in each component activation/deactivation methods (start/stop method
 
 2) second kind of tests: same as before, but some processing is done in each component start/stop methods.
 
-To launch the stress test under BndTools, click on the bnd.bnd file of the
+To launch the stress test under BndTools, click on the noindex.bndrun file of the
 "org.apache.felix.dm.benchmark" project, then click on "Run", then in "Run OSGi". 
 
 You should see something like that in the eclipse console:
 
------------------------------------------------------------------------------------------------------------------
-g! Starting benchmarks (each tested bundle will create 210 components).
+>> --------------------------------------------------------------------------------------------------------------
+g! Starting benchmarks (each tested bundle will add/remove 630 components during bundle activation).
 
 	[Starting benchmarks with no processing done in components start/stop methods]
 
-Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager ...............
--> results in nanos: [85,865,048 | 98,607,629 | 127,745,901 | 148,501,547 | 358,559,677]
+Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager ....................
+-> results in nanos: [189,130,687 | 205,730,144 | 312,092,102 | 357,470,857 | 871,419,487]
 
-Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager.parallel ...............
--> results in nanos: [62,455,799 | 65,343,664 | 69,237,440 | 76,452,266 | 82,839,040]
+Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager.parallel ....................
+-> results in nanos: [85,158,366 | 103,439,337 | 122,633,515 | 157,082,407 | 284,332,202]
 
 	[Starting benchmarks with processing done in components start/stop methods]
 
 Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager .....
--> results in nanos: [1,950,203,709 | 1,969,656,854 | 2,004,276,779 | 2,034,080,987 | 2,104,094,347]
+-> results in nanos: [2,748,431,149 | 2,750,475,610 | 2,756,254,193 | 2,772,447,115 | 2,774,345,245]
 
 Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager.parallel .....
--> results in nanos: [498,377,362 | 515,902,895 | 524,460,514 | 542,052,780 | 606,619,382]
+-> results in nanos: [687,259,058 | 696,725,568 | 700,220,615 | 704,310,739 | 740,325,481]
 -----------------------------------------------------------------------------------------------------------------
 
 You can also possibly run the same test using optimized DM filter indices.
-To do so, add the following jvm system parameters in the bnd.bnd "-runproperties" option:
+To do so, run "index.bndrun"
+but using DM filter indices has a CPU cost and are useful if you have many service dependencies.
+To test filter indices, first increase the number of components created/removed during bundle
+startup. To do so, edit the Artist.java and change the "Artists" when is by default set to 30, and set it to 300.
 
--runproperties:  \
-	ds.loglevel=warn,\
-	org.osgi.framework.bootdelegation='sun.*,com.sun.*,org.netbeans.*',\
-   -Dorg.apache.felix.dependencymanager.filterindex=objectClass,id
+You should then observe some significant performance improvements:
 
-You should then observe better performance results
+for example, with Artist.ARTISTS=300, you should observe the following:
+
+noindex.bndrun (no filter indices used):
+
+>> --------------------------------------------------------------------------------------------------------------
+ g! Starting benchmarks (each tested bundle will add/remove 6300 components during bundle activation).
+
+        [Starting benchmarks with no processing done in components start/stop methods]
+
+Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager .....
+-> results in nanos: [17,436,869,644 | 17,525,534,346 | 18,080,624,001 | 18,246,597,908 | 20,715,696,669]
+
+Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager.parallel .....
+-> results in nanos: [9,660,520,501 | 9,810,057,488 | 9,870,295,166 | 10,014,334,906 | 10,628,193,815]
+
+        [Starting benchmarks with processing done in components start/stop methods]
+
+Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager .....
+-> results in nanos: [42,700,651,438 | 43,207,156,615 | 43,653,372,523 | 43,869,438,994 | 44,715,701,457]
+
+Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager.parallel .....
+-> results in nanos: [15,021,876,153 | 15,091,340,552 | 15,202,305,936 | 15,248,728,826 | 15,398,221,492]
+-----------------------------------------------------------------------------------------------------------------
+ 
+and with index.bndrun (using DM filter indices):
+
+>> --------------------------------------------------------------------------------------------------------------
+g! Starting benchmarks (each tested bundle will add/remove 6300 components during bundle activation).
+
+        [Starting benchmarks with no processing done in components start/stop methods]
+
+Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager .....
+-> results in nanos: [3,142,869,517 | 3,564,970,695 | 4,023,603,870 | 6,206,640,362 | 6,918,113,818]
+
+Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager.parallel .....
+-> results in nanos: [2,868,554,914 | 2,873,491,201 | 2,897,439,973 | 2,913,317,331 | 3,890,123,728]
+
+        [Starting benchmarks with processing done in components start/stop methods]
+
+Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager .....
+-> results in nanos: [28,515,623,505 | 28,558,774,886 | 28,661,315,061 | 28,808,682,302 | 28,915,519,208]
+
+Benchmarking bundle: org.apache.felix.dependencymanager.benchmark.dependencymanager.parallel .....
+-> results in nanos: [7,702,400,991 | 7,749,145,806 | 7,760,650,323 | 7,832,386,237 | 7,854,739,136]
+-----------------------------------------------------------------------------------------------------------------
+ 
 
 How to interpret results:
 ========================
@@ -55,7 +100,7 @@ How to interpret results:
 for each tested bundle, the time spent is displayed in nanos.
 for example: 
 
-  results=165645599,240534693,250335703,276343059,458505648
+	-> results in nanos: [85,158,366 | 103,439,337 | 122,633,515 | 157,082,407 | 284,332,202]
 
 Here is how to interpret the results: when testing a bundle, the benchmark controller starts/stops
 it many times, then the elapsed time used to start the bundle, activate/deactivate all services, and
